added ride apis
