# models/finder/ride.models.ts
@@ -1,3 +1,4 @@
+
 import mongoose, { Schema } from "mongoose";
 const rideSchema = new Schema({
     user: { type: mongoose.Schema.Types.ObjectId, ref: 'User' },
@@ -14,7 +15,7 @@ const rideSchema = new Schema({
         formattedAddress: String
     },
     rideType: { type: String, enum: ['standard', 'premium'], default: 'standard' },
-    rideStatus: { type: String, enum: ['requested', 'accepted', 'in_progress', 'completed'], default: 'requested' },
+    rideStatus: { type: String, enum: ['requested', 'accepted', 'in_progress', 'completed','cancelled'], default: 'requested' },
     estimatedFare: { type: Number },
     distance: { type: Number },
     duration: { type: Number },
@@ -24,7 +25,7 @@ const rideSchema = new Schema({
         model: { type: String },
         licensePlate: { type: String }
     },
-    paymentMethod: { type: String, enum: ['credit_card', 'cash'], default: 'credit_card' },
+    paymentMethod: { type: String, enum: ['credit_card', 'cash'], default: 'cash' },
     totalFare: { type: Number },
     paymentStatus: { type: String, enum: ['pending', 'completed'], default: 'pending' },
     rideRequestTime: { type: Date, default: Date.now },
@@ -38,7 +39,12 @@ const rideSchema = new Schema({
         distance: { type: Number }
     },
     userRating: { type: Number },
-    userFeedback: { type: String }
+    userFeedback: { type: String },
+    cancelledBy:{
+        type:mongoose.Schema.Types.ObjectId,
+        ref:'User',
+        default :null
+    }
 });
 
 const Ride = mongoose.model('Ride', rideSchema);
