# routes/finder/finder.routes.ts
@@ -1,7 +1,11 @@
 import express from 'express';
-import { bookRide } from '../../controllers/finder/finder.conntrollers';
+import { afterLocation, bookRide, cancelRide, getRides } from '../../controllers/finder/finder.conntrollers';
+import { createDriver } from '../../controllers/driver/driver.controllers';
 const finderRoutes=express.Router();
 
 finderRoutes.post('/bookRide',bookRide);
+finderRoutes.post('/getAfterLocation',afterLocation);
+finderRoutes.get('/getRides',getRides);
+finderRoutes.put('/cancelRide',cancelRide);
 
 export {finderRoutes}
